--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S. RIVERA</title>
     <link rel="icon" type="svg" href="./assets/logo.svg">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./style/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,13 +40,11 @@
         <div class="bot-nav">
             <div class="socials">
                 <a href="mailto:seriveramosq@gmail.com" class="fa-solid fa-envelope" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/seriveramosq" class="fa-brands fa-linkedin-in" target="_blank"></a>
+                <a href="https://github.com/dnbsammie" class="fa-brands fa-github" target="_blank"></a>
+                <a href="https://www.instagram.com/dnbsammie" class="fa-brands fa-instagram" target="_blank"></a>
                 <a href="https://open.spotify.com/intl-es/artist/6cxOnM0png8kY2ue6cXljn?si=aKizrW-aRPS6VXYT7AnMAw"
                     class="fa-brands fa-spotify" target="_blank"></a>
-                <a href="https://github.com/dnbsammie" class="fa-brands fa-github" target="_blank"></a>
-                <a href="https://www.instagram.com/dnbsammie" class="fa-brands fa-instagram"
-                    target="_blank"></a>
-                <a href="https://www.linkedin.com/in/seriveramosq" class="fa-brands fa-linkedin-in"
-                    target="_blank"></a>
                 <a href="https://www.youtube.com/@dnbsammie" class="fa-brands fa-youtube" target="_blank"></a>
             </div>
         </div>
@@ -56,13 +54,13 @@
             <div class="container">
                 <div class="hero-l">
                     <div class="name">
-                        <h5>SAMUEL RIVERA</h5>
-                        <p>SOFTWARE DEVELOPER</p>
+                        <h4>SAMUEL RIVERA</h4>
+                        <h6>SOFTWARE DEVELOPER</h6>
                     </div>
                 </div>
                 <div class="hero-r">
                     <button class="line-button" id="gt-button">GET IN TOUCH</button>
-                    <button class="fill-button" id="vp-button">VIEW PORTFOLIO</button>
+                    <button class="fill-button" id="vp-button">PORTFOLIO</button>
                 </div>
             </div>
         </section>
@@ -73,6 +71,7 @@
                 </div>
                 <div class="prof-r">
                     <div class="bout">
+                        <h2>WHO I AM?</h2>
                         <p>With an interest in technology, innovation and continuous improvement, I seek to apply my
                             knowledge in projects that positively impact
                             society. Always looking for new opportunities to learn and grow professionally.</p>
@@ -84,23 +83,86 @@
                     <div class="cta">
                         <div class="socials">
                             <a href="mailto:seriveramosq@gmail.com" class="fa-solid fa-envelope"></a>
+                            <a href="https://www.linkedin.com/in/seriveramosq" class="fa-brands fa-linkedin-in" target="_blank"></a>
                             <a href="https://github.com/dnbsammie" class="fa-brands fa-github" target="_blank"></a>
-                            <a href="https://www.instagram.com/dnbsammie" class="fa-brands fa-instagram"
-                                target="_blank"></a>
-                            <a href="https://www.linkedin.com/in/seriveramosq" class="fa-brands fa-linkedin-in"
-                                target="_blank"></a>
-                            <a href="https://www.youtube.com/@dnbsammie" class="fa-brands fa-youtube"
-                                target="_blank"></a>
+                            <a href="https://www.instagram.com/dnbsammie" class="fa-brands fa-instagram" target="_blank"></a>
+                            <a href="https://open.spotify.com/intl-es/artist/6cxOnM0png8kY2ue6cXljn?si=aKizrW-aRPS6VXYT7AnMAw"
+                                class="fa-brands fa-spotify" target="_blank"></a>
+                            <a href="https://www.youtube.com/@dnbsammie" class="fa-brands fa-youtube" target="_blank"></a>
                         </div>
-                        <button type="button">RESUME</button>
+                        <button type="button" class="fill-button" id="resumebutton">RESUME</button>
                     </div>
                 </div>
             </div>
         </section>
         <section class="projects" id="projects">
             <div class="sticky">
-                <h1>PROJECTS</h1>
-                
+                <div class="scroll_section">
+                    <div class="project">
+                        <img src="./assets/proyect1.webp" alt="Image 1">
+                        <div class="project_content">
+                            <div class="project-top">
+                                <h5>PROYECT 01</h5>
+                                <h6>description</h6>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/dnbsammie/repo" class="fa-brands fa-github"
+                                    target="_blank"></a>
+                                <a href="#video1" class="fa-brands fa-youtube"
+                                    data-video-url="//www.youtube.com/embed/"></a>
+                                <a href="portfolio.html#proyect1" class="fa-solid fa-info"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img src="./assets/proyect1.webp" alt="Image 1">
+                        <div class="project_content">
+                            <div class="project-top">
+                                <h5>PROYECT 02</h5>
+                                <h6>description</h6>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/dnbsammie/repo" class="fa-brands fa-github"
+                                    target="_blank"></a>
+                                <a href="#video1" class="fa-brands fa-youtube"
+                                    data-video-url="//www.youtube.com/embed/"></a>
+                                <a href="portfolio.html#proyect2" class="fa-solid fa-info"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img src="./assets/proyect3.webp" alt="Image 3">
+                        <div class="project_content">
+                            <div class="project-top">
+                                <h5>PROYECT 03</h5>
+                                <h6>description</h6>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/dnbsammie/repo" class="fa-brands fa-github"
+                                    target="_blank"></a>
+                                <a href="#video1" class="fa-brands fa-youtube"
+                                    data-video-url="//www.youtube.com/embed/"></a>
+                                <a href="portfolio.html#proyect3" class="fa-solid fa-info"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img src="./assets/proyect4.webp" alt="Image 4">
+                        <div class="project_content">
+                            <div class="project-top">
+                                <h5>PROYECT 04</h5>
+                                <h6>description</h6>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/dnbsammie/repo" class="fa-brands fa-github"
+                                    target="_blank"></a>
+                                <a href="#video1" class="fa-brands fa-youtube"
+                                    data-video-url="//www.youtube.com/embed/"></a>
+                                <a href="portfolio.html#proyect4" class="fa-solid fa-info"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -111,7 +173,7 @@
                 </div>
             </div>
             <br>
-            <button class="close-modal" id="closeModal">Close</button>
+            <button class="close-modal line-button" id="closeModal">Close</button>
         </div>
 
         <section class="services" id="services">
@@ -178,13 +240,13 @@
                         <hr>
                     </div>
                     <div class="socials">
-                        <a href="https://open.spotify.com/intl-es/artist/6cxOnM0png8kY2ue6cXljn?si=aKizrW-aRPS6VXYT7AnMAw"
-                            class="fa-brands fa-spotify" target="_blank"></a>
+                        <a href="https://www.linkedin.com/in/seriveramosq" class="fa-brands fa-linkedin-in"
+                            target="_blank"></a>
                         <a href="https://github.com/dnbsammie" class="fa-brands fa-github" target="_blank"></a>
                         <a href="https://www.instagram.com/dnbsammie" class="fa-brands fa-instagram"
                             target="_blank"></a>
-                        <a href="https://www.linkedin.com/in/seriveramosq" class="fa-brands fa-linkedin-in"
-                            target="_blank"></a>
+                        <a href="https://open.spotify.com/intl-es/artist/6cxOnM0png8kY2ue6cXljn?si=aKizrW-aRPS6VXYT7AnMAw"
+                            class="fa-brands fa-spotify" target="_blank"></a>
                         <a href="https://www.youtube.com/@dnbsammie" class="fa-brands fa-youtube" target="_blank"></a>
                     </div>
                 </div>
