style: adjust mobile sizes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
@@ -17,10 +17,13 @@
   <meta property="og:title" content="Samuel Rivera | Portfolio" />
   <meta property="og:description" content="Explore Sam's Portfolio." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dnbsammie.github.io/Portfolio" />
+  <meta property="og:url" content="https://dnbsammie.github.io/Portfolio/" />
   <meta property="og:image" content="https://dnbsammie.github.io/Portfolio/public/images/preview-1.png" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title>S. RIVERA</title>
-  <link rel="canonical" href="https://dnbsammie.github.io/Portfolio">
+  <link rel="alternate" hreflang="es" href="https://dnbsammie.github.io/Portfolio/es" />
+  <link rel="alternate" hreflang="en" href="https://dnbsammie.github.io/Portfolio/en" />
+  <link rel="canonical" href="https://dnbsammie.github.io/Portfolio/">
   <link rel="manifest" href="./public/manifest.json">
   <!-- favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/icons/favicon-16x16.png">
