--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,8 @@
     content="Web Development, Digital Audio, Software Engineer, React, Vite, JavaScript, Frontend, Portfolio" />
   <meta name="robots" content="index, follow">
   <meta name="author" content="Samuel Rivera" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Open Graph -->
   <meta property="og:title" content="Samuel Rivera | Portfolio" />
   <meta property="og:description" content="Explore Sam's Portfolio." />
@@ -24,7 +26,7 @@
   <link rel="alternate" hreflang="es" href="https://dnbsammie.github.io/Portfolio/es" />
   <link rel="alternate" hreflang="en" href="https://dnbsammie.github.io/Portfolio/en" />
   <link rel="canonical" href="https://dnbsammie.github.io/Portfolio/">
-  <link rel="manifest" href="./public/manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
   <!-- favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/icons/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/icons/favicon-32x32.png">
