feat: 404 and manifest fix

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,20 +13,18 @@
     content="Web Development, Digital Audio, Software Engineer, React, Vite, JavaScript, Frontend, Portfolio" />
   <meta name="robots" content="index, follow">
   <meta name="author" content="Samuel Rivera" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Open Graph -->
   <meta property="og:title" content="Samuel Rivera | Portfolio" />
   <meta property="og:description" content="Explore Sam's Portfolio." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dnbsammie.github.io/Portfolio/" />
+  <meta property="og:url" content="https://dnbsammie.github.io/Portfolio" />
   <meta property="og:image" content="https://dnbsammie.github.io/Portfolio/public/images/preview-1.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <title>S. RIVERA</title>
-  <link rel="alternate" hreflang="es" href="https://dnbsammie.github.io/Portfolio/es" />
-  <link rel="alternate" hreflang="en" href="https://dnbsammie.github.io/Portfolio/en" />
-  <link rel="canonical" href="https://dnbsammie.github.io/Portfolio/">
-  <!-- <link rel="manifest" href="manifest.json"> -->
+  <link rel="canonical" href="https://dnbsammie.github.io/Portfolio">
+  <link rel="manifest" href="manifest.json">
   <!-- favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/icons/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/icons/favicon-32x32.png">
