--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,11 +19,11 @@
   <meta property="og:title" content="Samuel Rivera | Portfolio" />
   <meta property="og:description" content="Explore Sam's Portfolio." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dnbsammie.github.io/Portfolio" />
+  <meta property="og:url" content="https://dnbsammie.github.io/Portfolio/" />
   <meta property="og:image" content="https://dnbsammie.github.io/Portfolio/public/images/preview-1.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <title>S. RIVERA</title>
-  <link rel="canonical" href="https://dnbsammie.github.io/Portfolio">
+  <link rel="canonical" href="https://dnbsammie.github.io/Portfolio/">
   <link rel="manifest" href="manifest.json">
   <!-- favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="./public/icons/favicon-16x16.png">
